gitops/applications/obsidian-sync/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-obsidian-sync
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
