gitops/applications/obsidian-sync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: app-obsidian-sync
spec:
  ports:
    - name: couchdb
      port: 5984
      targetPort: 5984
  selector:
    app: couchdb
  type: ClusterIP
