gitops/applications/obsidian-sync/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: couchdb
  namespace: app-obsidian-sync
spec:
  host: couchdb.apps.ocp.jharings.de
  to:
    kind: Service
    name: couchdb
    weight: 100
  port:
    targetPort: couchdb
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
